--- a/.gitignore
+++ b/.gitignore
@@ -18,6 +18,7 @@ develop-eggs
 lib
 lib64
 flask
+db_repository
 
 # Installer logs
 pip-log.txt
@@ -34,3 +35,7 @@ nosetests.xml
 .mr.developer.cfg
 .project
 .pydevproject
+
+
+# DB
+app.db
